# dreamer

./: .gitignore  .pre-commit-config.yaml  App.tsx  PRD.md  README.md  cli.py  geminiService.ts  index.html  metadata.json  package.json  pyproject.toml  requirements.txt  types.ts
.github/workflows/: ci.yml
.jules/: schedules.toml
.jules/jules/: auto_fix.py
project_test/: input.txt
src/dreamer/: __init__.py  cli.py  database.py  models.py  protocols.py  service.py
src/dreamer/adapters/: __init__.py  gemini.py
tests/: test_basic.py  test_cli.py  test_coverage_gap.py  test_models.py  test_service.py
