[project]
name = "dreamer"
version = "0.1.0"
description = "SonicVision Studio CLI - Audio to Visual Storyboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.56.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "tenacity>=9.1.2",
    "typer>=0.21.1",
    "python-frontmatter>=1.1.0",
    "jinja2>=3.1.3",
    "requests>=2.31.0",
]

[project.scripts]
dreamer = "dreamer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # Incompatible with D211
    "D213", # Incompatible with D212
    "COM812", # Conflicts with formatter
    "ISC001", # Conflicts with formatter
    "B008", # Typer/FastAPI dependency injection pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D", "ANN", "PLR2004", "ARG001"]
"src/dreamer/cli.py" = ["PLR0913"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]
