[project]
name = "dreamer-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.12.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.22",
]

[project.scripts]
dreamer = "dreamer.cli:app"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dreamer"]

[tool.ruff]
target-version = "py313"


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # Incompatible with D211
    "D213", # Incompatible with D212
    "COM812", # Conflicts with formatter
    "ISC001", # Conflicts with formatter
    "B008", # Typer/FastAPI dependency injection pattern
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D", "ANN", "PLR2004", "ARG001", "INP001"]
"src/dreamer/cli.py" = ["ARG001", "PLR0913", "E501", "D", "C901", "PLR0915", "TRY301", "PLR0912", "ASYNC240", "BLE001", "S603", "B905", "FBT001", "FBT003"]
"src/dreamer/database.py" = ["PLR0913", "E501"]
"src/dreamer/models.py" = ["E501"]
"src/dreamer/adapters/gemini.py" = ["E501", "BLE001", "C901", "TRY301", "PLR0912"]


[tool.pytest.ini_options]
pythonpath = ["src"]

